packages/lustre-v6.6.103.3/test/should_fail/type/condact2.lus


node condact2(c,x,y : int) returns (o: int);
let
	o = condact<<+, 0>>(c,x,y);
tel  
